--- a/Pegs/Pegs.csproj
+++ b/Pegs/Pegs.csproj
@@ -62,6 +62,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IntPoint.cs" />
+    <Compile Include="PegDropZone.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
