--- a/Pegs/Pegs.csproj
+++ b/Pegs/Pegs.csproj
@@ -54,7 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -62,9 +62,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="IntPoint.cs" />
-    <Compile Include="PegDropZone.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="Models\IntPoint.cs" />
+    <Compile Include="Models\GameBoard.cs" />
+    <Compile Include="Views\GameView.cs" />
+    <Compile Include="Views\PegDropZone.cs" />
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -74,7 +77,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Peg.cs" />
+    <Compile Include="Views\Peg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -100,5 +103,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
